--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regression is based on numbers and classifaction i"
+    "Regression is based on numbers and classifaction is based on "
    ]
   },
   {
